Pencil engine now makes a call to the proxy, and sends an Each message when it receives an answer. It also sends an All message with a hardcoded (yet good quality) json report

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "scripts": {
     "test": "node test.js"
   },
-  "keywords": ["module", "text-processing", "callback", "analysis"],
+  "keywords": [
+    "module",
+    "text-processing",
+    "callback",
+    "analysis"
+  ],
   "author": "",
   "license": "MIT",
   "repository": {
@@ -17,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/moebio/pencil-engine/issues"
   },
-  "homepage": "https://github.com/moebio/pencil-engine#readme"
-} 
+  "homepage": "https://github.com/moebio/pencil-engine#readme",
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  }
+}
